# cpp-starter

./: .clang-format  CMakeLists.txt  README.md  run.sh
src/: main.cpp
